--- a/client/src/components/steps/ReservationSucess.css
+++ b/client/src/components/steps/ReservationSucess.css
@@ -20,7 +20,6 @@ h2 {
 .qr-code {
   width: 100%;
   aspect-ratio: 1;
-  background-color: #888888;
   border-radius: 30px;
   margin-top: 40px;
 }
@@ -33,7 +32,6 @@ h2 {
   position: relative;
   left: -50px;
   bottom: -30px;
-  padding-top: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,6 +56,7 @@ h2 {
 }
 
 .booth-description {
+  padding-bottom: 25px;
   color: #231815;
   font-size: 24px;
   line-height: 44px;
@@ -83,14 +82,14 @@ h2 {
   text-align: center;
   position: absolute;
   top: 55%;
-  left: 30%;
+  left: 25%;
   transform: translateX(-50%) translateY(-50%);
 }
 
 @media screen and (max-width: 640px) {
   .contact-info {
     top: 60%;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 32px;
   }
 
